# pico_eth

./: .gitignore  CMakeLists.txt  README.md  ethpio_arch.c  ethpio_arch.h  ethserdes.pio  lwiperftest.h  main.c  ntptest.c  ntptest.h  picopioeth.c  picopioeth.h
arch/: cc.h
includes/: ethpio_arch.h  ethserdes.pio  lwipopts.h  picopioeth.c  picopioeth.h
